# adaptix-ai

./: DEPLOYMENT.md  FRONTEND_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  POLYREPO_MIGRATION_CHARTER.md  README.md  REPO_OWNERSHIP.md  docker-compose.yml
backend/: .env.example  Dockerfile  README_AI_EXTRACTION.txt  alembic.ini  pyproject.toml
backend/adaptix_ai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/alembic/: README.md  env.py
backend/alembic/versions/: 001_initial_schema.py  002_budget_tracking.py
backend/core_app/: __init__.py  config.py  config_extensions.py  database.py  main.py
backend/core_app/ai/: __init__.py  audit.py  bedrock_service.py  events.py  fire_intelligence.py  guardrails.py  orchestrator.py  prompt_registry.py  response_contracts.py  service.py  task_types.py  task_types_enhanced.py
backend/core_app/api/: __init__.py  adaptix_ai_router.py  adaptix_domain_router_common.py  ai_router.py  ai_shell_router.py  alerting_router.py  analytics_router.py  auth_router.py  billing_intelligence_router.py  budget_router.py  dependencies.py  founder_ai_router.py  health_router.py  review_router.py  system_health_router.py
backend/core_app/core/: __init__.py  security.py
backend/core_app/domain/: air_medical_module.py  epcr_module.py  fire_rescue_module.py  transport_module.py
backend/core_app/models/: __init__.py  (+8 more)
backend/tests/: conftest.py  test_alerting_service.py  test_billing_intelligence_service.py  test_budget_service.py  test_integration_workflows.py  test_model_routing_service.py  test_policy_simulation_packs.py
(+50 files in other folders)
