[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptix-ai-backend"
version = "0.1.0"
description = "Adaptix AI Governance and Execution Service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.0,<3",
  "sqlalchemy>=2.0,<3",
  "alembic>=1.13,<2",
  "psycopg2-binary>=2.9,<3",
  "boto3>=1.34,<2",
  "botocore>=1.34,<2",
  "python-jose[cryptography]>=3.3,<4",
  "passlib[bcrypt]>=1.7,<2",
  "python-multipart>=0.0.6,<1",
  "httpx>=0.27,<1",
  "redis>=5.0,<6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "pytest-asyncio>=0.23,<1",
  "pytest-cov>=4.1,<5",
  "black>=24.0,<25",
  "ruff>=0.3,<1",
  "mypy>=1.8,<2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core_app*"]
